--- a/demo/iosApp/Configuration/Config.xcconfig
+++ b/demo/iosApp/Configuration/Config.xcconfig
@@ -1,3 +1,3 @@
 TEAM_ID=
-BUNDLE_ID=com.ttllab.quake_compose.quake-compose
-APP_NAME=quake-compose
+BUNDLE_ID=com.ttllab.quake-compose-demo
+APP_NAME=quake-compose-demo
